--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -16,10 +16,12 @@
       <em>friend</em>
       <small>FINDER</small>
     </h1>
+    <div class="btn-group">
+        <a href="/" class="btn btn-info" role="button">Home</a>
+        <a href="/survey" class="btn btn-info" role="button">Survey</a>
+    </div>
   </div>
-  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Launch demo modal
-  </button>
+    
   <div id="questions">
 
   </div>
@@ -47,6 +49,14 @@
       }
       return choices;
     }
+    var questions = [
+      "I'm sorry, I'm a vegan <-> If it doesn't bleed, I don't eat it",
+      "I consider yoga a sport <-> If your bones have not been broken, you have not participated in a sport",
+      "Fuchsia is the new Flavescent <-> I only know black & blue",
+      "My mood is ambivolent at times <-> I don't know what that word is, but it's making me angry",
+      "Silence is the best protest <-> He/she didn't get the point until I hear 'Ow!'"
+    ]
+    for (var i=0; i< questions.length; i++);
     $("#questions").append(appendChoices("1"));
 
     function getvalues() {
@@ -55,5 +65,4 @@
   </script>
 
 </body>
-
 </html>
