--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,30 +12,16 @@
 
 <body>
     <div class="jumbotron">
-        <h1><em>friend</em><small>FINDER</small></h1>
+        <h1>
+            <em>friend</em>
+            <small>FINDER</small>
+        </h1>
+        <div class="btn-group">
+            <a href="/" class="btn btn-info" role="button">Home</a>
+            <a href="/survey" class="btn btn-info" role="button">Survey</a>
+        </div>
     </div>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-            Launch demo modal
-          </button>
-          
-          <!-- Modal -->
-          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-            <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
