--- a/app/public/results.html
+++ b/app/public/results.html
@@ -22,6 +22,9 @@
         </div>
     </div>
 
+    <div id="result">
+
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
@@ -29,6 +32,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
+
+        <script>
+            $("#result").html = windows.location.href;
+        </script>
 </body>
 
 </html>
