Removed results.html as I don't need it. i will use the home page via js to show results based on parameters sent

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -81,7 +81,7 @@
       console.log(surveyData);
       $.post("/api/survey", surveyData);
       alert("Survey has been added");
-      window.location ='/';
+      window.location ='/?name=' + surveyData.name;
     });
   </script>
 
