--- a/app/public/home.html
+++ b/app/public/home.html
@@ -23,10 +23,8 @@
     </div>
     <div id="result"></div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 
         <script>
@@ -39,7 +37,13 @@
             }
         }
         if($.urlParam("name")){
+            var dbfriends;
+            $.get("/api/friends",function(data){
+                dbfriends = data;
+                console.log(dbfriends);
+            });
             $("#result").html($.urlParam("name"));
+
         }
         </script>
 </body>
