--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -73,7 +73,7 @@
       var scores = [];
       var surveyData = {
         "name": $("#name").val(),
-        "URL": $("#imageUrl").val(),
+        "photo": $("#imageUrl").val(),
         "score": scores
       };
       for (var i = 0; i < questionCount; i++) {
