Finished Logic with selection and modal on Home page

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -21,7 +21,21 @@
             <a href="/survey" class="btn btn-info" role="button">Survey</a>
         </div>
     </div>
-    <div id="result"></div>
+    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Best Friend Search Result</div>
+                    <div class="panel-body">
+                        <p>Below is the result of our magical search</p>
+                    </div>
+                    <table class="table">
+                        ...
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -44,47 +58,60 @@
                 getBestFriend(user, data);
             });
         }
-        function getAvg (numArray){
+
+        function getAvg(numArray) {
             var x = 0;
-            for(var i=0; i < numArray.length; i++){
-                x+=numArray[i];
+            for (var i = 0; i < numArray.length; i++) {
+                x += numArray[i];
             }
-            console.log("getAvg",numArray,x);
-            return x/numArray.length;
+            var answer = x / numArray.length;
+            console.log("getAvg", answer);
+            return answer;
         }
+
         function getBestFriend(name, usersarray) {
             var mainUser;
             var otherUsers = [];
             var bestFriend = {
                 name: "",
-                value: "",
+                value: 10,
                 photo: ""
             }
             for (var i = 0; i < usersarray.length; i++) {
                 if (usersarray[i].name === name) {
-                    console.log("line 64 - ", usersarray[i].name);
+                    console.log("mainUser ->", usersarray[i]);
                     mainUser = usersarray[i];
                 } else {
-                    console.log("line 67 - ", usersarray[i].name);
+                    console.log("otherUsers ->", usersarray[i]);
                     otherUsers.push(usersarray[i])
                 }
             }
+            console.log("otherUsers Length->", otherUsers.length);
             for (var i = 0; i < otherUsers.length; i++) { //iterate other users
                 var other = otherUsers[i],
-                    comparison = []; //place other user on var other
-                console.log(other);
-                for (var i = 0; i < other.scores.length; i++) { // iterate through other user's scores
-                    comparison.push(Math.abs(mainUser.score[i] -
-                        other.scores[i]));
+                    comparison = []; //place other user on var other. comparison is the difference of the values per question
+                console.log("other ->", i, other);
+                for (var j = 0; j < other.scores.length; j++) { // iterate through other user's scores
+                    comparison.push(Math.abs(mainUser.scores[j] -
+                        other.scores[j]));
                 }
-                console.log(getAvg(comparison));
-                if (getAvg(comparison) > bestFriend.value) {
+
+                var value = getAvg(comparison);
+                console.log("comparison->", value, bestFriend.value);
+                if (value < bestFriend.value) {
                     bestFriend.name = other.name;
-                    bestFriend.value = comparison;
+                    bestFriend.value = value;
                     bestFriend.photo = other.photo;
                 }
             }
             console.log(bestFriend);
+            var row = $("<tr>"),tname = $("<td>"), timage = $("<td>");
+            tname.append(bestFriend.name);
+            timage.append($("<img>").attr("src", bestFriend.photo).width(100));
+            row.append(tname).append(timage);
+
+            $(".table").append(row);
+            $(".modal").modal("show");
         }
     </script>
 </body>
